Name:           haskline
Cabal-Version:  >=1.1.4
Version:        0.0
Category:       User Interfaces
License:        BSD3
License-File:   LICENSE
Copyright:      (c) Judah Jacobson
Author:         Judah Jacobson
Maintainer:     Judah Jacobson <judah.jacobson@gmail.com>
Category:       User Interfaces
Synopsis:       An extensible library for reading a line of input from the user.
Description:    This library provides an extensible, flexible interface for reading
                a line of input from the user.  Its goal is to be useful enough to 
                replace readline in the GHC compiler.
Homepage:       http://code.haskell.org/haskline
Stability:      Experimental
Build-depends:  base>=3.0, terminfo>=0.2, unix>=2.2,
                stm>=2.1.1, mtl>=1.1, containers>=0.1,
                filepath>=1.1, directory>=1.0
Extensions:     ForeignFunctionInterface, Rank2Types, FlexibleInstances,
                FlexibleContexts, ExistentialQuantification
                ScopedTypeVariables, GeneralizedNewtypeDeriving
                MultiParamTypeClasses, OverlappingInstances
                -- Note: GADTs are needed to allow contexts of different
                -- lengths (see code of HaskLine.repeatTillFinish)
                GADTs
Exposed-Modules:
                System.Console.HaskLine
                System.Console.HaskLine.Command
                System.Console.HaskLine.Command.Completion
                System.Console.HaskLine.Command.History
                System.Console.HaskLine.Draw
                System.Console.HaskLine.Emacs
                System.Console.HaskLine.HaskLineT
                System.Console.HaskLine.LineState
                System.Console.HaskLine.Monads
                System.Console.HaskLine.Settings
                System.Console.HaskLine.Vi
                System.Console.HaskLine.WindowSize
ghc-options: -Wall
